Fix blockquote spacing and RTL

--- a/src/app/editor.scss
+++ b/src/app/editor.scss
@@ -381,9 +381,6 @@
   }
 
   /* Blockquote */
-  .view-content .markdown-rendered blockquote {
-    border-inline-start: none;
-  }
 
   .markdown-rendered blockquote {
     border-radius: var(--callout-radius);
@@ -398,22 +395,8 @@
     border-radius: 100vh;
   }
 
-  .el-blockquote::before,
-  .markdown-source-view.mod-cm6.is-live-preview .HyperMD-quote:before {
-    position: absolute;
-    border-inline-start: none;
-    background-color: var(--blockquote-border-color);
-    width: var(--blockquote-border-thickness);
-    height: 100%;
-    content: "";
-  }
-
-  .HyperMD-quote {
-    padding-right: 16px !important;
-  }
-
   .cm-line.HyperMD-quote > span:first-child {
-    margin-right: 16px;
+    margin-left: 16px;
   }
 
   body:not(.is-mobile) {
